@@ -44,9 +44,11 @@ typedef struct
 
 GType display_get_type (void);
 
-Display *display_new (gint index);
+Display *display_new (gint index, XServer *xserver);
 
 gint display_get_index (Display *display);
+
+XServer *display_get_xserver (Display *display);
 
 void display_set_session_wrapper (Display *display, const gchar *session_wrapper);
 
@@ -81,10 +83,6 @@ const gchar *display_get_pam_service (Display *display);
 void display_set_pam_autologin_service (Display *display, const gchar *service);
 
 const gchar *display_get_pam_autologin_service (Display *display);
-
-void display_set_xserver (Display *display, XServer *xserver);
-
-XServer *display_get_xserver (Display *display);
 
 void display_set_vt (Display *display, gint vt);
 
