@@ -1,0 +1,12 @@
+[LightDM]
+seats=test-seat
+
+[test-seat]
+display-number=99
+
+[test-session-config]
+crash-xserver=true
+
+[test-greeter-config]
+username=alice
+password=password
