@@ -1,0 +1,48 @@
+RUNNER DAEMON-START
+
+# XServer starts
+XSERVER :.* START
+XSERVER :.* INDICATE-READY
+XSERVER :.* ACCEPT-CONNECT
+
+# Greeter starts
+GREETER START
+XSERVER :.* ACCEPT-CONNECT
+GREETER CONNECT-XSERVER :.*
+GREETER CONNECT-TO-DAEMON
+GREETER CONNECTED-TO-DAEMON
+
+# Log in as alice
+GREETER LOGIN USERNAME=alice
+GREETER SHOW-PROMPT TEXT="Password:"
+GREETER PROVIDE-SECRET TEXT="password"
+GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
+
+# Greeter quits, and session starts
+GREETER QUIT
+SESSION START USER=alice
+XSERVER :.* ACCEPT-CONNECT
+SESSION CONNECT-XSERVER
+
+# X server crashes (triggered by user session)
+SESSION CRASH-XSERVER
+XSERVER :.* CRASH
+
+# User session is terminated
+SESSION TERMINATE SIGNAL=15
+
+# X server restarts and loads greeter
+XSERVER :.* START
+XSERVER :.* INDICATE-READY
+XSERVER :.* ACCEPT-CONNECT
+GREETER START
+XSERVER :.* ACCEPT-CONNECT
+GREETER CONNECT-XSERVER :.*
+GREETER CONNECT-TO-DAEMON
+GREETER CONNECTED-TO-DAEMON
+
+*STOP-DAEMON
+# Don't know what order they will terminate
+(GREETER TERMINATE SIGNAL=15|XSERVER :.* TERMINATE SIGNAL=15)
+(GREETER TERMINATE SIGNAL=15|XSERVER :.* TERMINATE SIGNAL=15)
+RUNNER DAEMON-EXIT STATUS=0
