@@ -1,0 +1,2 @@
+#!/bin/sh
+./src/test-runner login-gobject-xserver-crash
