@@ -2,6 +2,7 @@ Overview of changes in lightdm 0.4.1
 
     * Fix linking issue with -z,defs
     * Added guest account support
+    * Restart X server if it crashes during a session
 
 Overview of changes in lightdm 0.4.0
 
